[JBRes-1799] Adds support to add a minimize project action via cli interface